add parameter to template-call ... ...which sets update_submodule for BuildDocs to false

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -22,6 +22,8 @@ stages:
         dependsOn: ExperimentalCheckoutDocs
         steps:
           - template: steps/build_mkdocs.yml
+            parameters:
+              update_submodule: false
 
   - stage: Django
     dependsOn:
