--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -10,39 +10,29 @@ stages:
   - stage: MkDocs
     dependsOn:
     jobs:
-      - job: ExperimentalCheckoutDocs
-        displayName: Test new Steps
-        dependsOn:
-        steps:
-          - template: steps/checkout_submodules.yml
-            parameters:
-              submodule: mkdocs-material
       - job: BuildDocs
         displayName: Build MkDocs
         dependsOn: ExperimentalCheckoutDocs
         steps:
           - template: steps/build_mkdocs.yml
             parameters:
-              update_submodule: false
+              update_submodule: true
 
   - stage: Django
     dependsOn:
     jobs:
-      - job: ExperimentalCheckoutDjango
-        displayName: Test new Steps
-        dependsOn:
-        steps:
-          - template: steps/checkout_submodules.yml
-            parameters:
-              submodule: django_webapp
       - job: ExperimentalBuildDjango
-        displayName: Build Experimental
-        dependsOn: ExperimentalCheckoutDjango
+        displayName: Build Django
+        dependsOn:
         variables:
           - group: django_gh
           - group: django-dev
           - group: django-superuser
         steps:
+          - template: steps/checkout_submodules.yml
+            parameters:
+              submodule: django_webapp
+
           - template: steps/build_webapp.yml
             parameters:
               azureSubscription: django_gh
