fixed wrong dependency in experimental

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -12,7 +12,7 @@ stages:
     jobs:
       - job: BuildDocs
         displayName: Build MkDocs
-        dependsOn: ExperimentalCheckoutDocs
+        dependsOn:
         steps:
           - template: steps/build_mkdocs.yml
             parameters:
