--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -7,12 +7,13 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - stage: MkDocs
+  - stage: MkDocs-Material
     dependsOn:
     jobs:
       - job: BuildDocs
         displayName: Build MkDocs
         dependsOn:
+
         steps:
           - template: steps/build_mkdocs.yml
             parameters:
@@ -21,13 +22,14 @@ stages:
   - stage: Django
     dependsOn:
     jobs:
-      - job: ExperimentalBuildDjango
+      - job: BuildDjango
         displayName: Build Django
         dependsOn:
         variables:
           - group: django_gh
           - group: django-dev
           - group: django-superuser
+
         steps:
           - template: steps/checkout_submodules.yml
             parameters:
