--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,11 @@ stages:
               submodules:
                 - django_webapp
           - template: pipelines/steps/build_webapp.yml
+            parameters:
+              azureSubscription: django_gh
+              resourceGroupName: django_gh
+              projectRoot: $(System.DefaultWorkingDirectory)/django_webapp
+              debug: false
           - template: pipelines/steps/run_tests.yml
           - template: pipelines/steps/publish_artifact.yml
 
