--- a/.editorconfig
+++ b/.editorconfig
@@ -4,24 +4,22 @@ root = true
 # All files
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
 end_of_line = lf
+indent_size = 2
+tab_width = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 # Markdown
-[docs/**.md]
+[*.md]
 indent_size = 4
-
-# YAML Files
-[*.{yml,yaml}]
-trim_trailing_whitespace = false
-insert_final_newline = false
+indent_style = space
 
 # JSON-Files
 [*.{json,jsonc}]
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
+insert_final_newline = false
 
 # Python
 [*.py]
