and another try to find out if it would work

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -1,7 +1,10 @@
 # pipeline to test if things would work
 
 trigger:
-  - feature/experimental/*
+  batch: true
+  branches:
+    include:
+      - feature/experimental/*
 
 pool:
   vmImage: ubuntu-latest
