fix experimental stage BuildDjango

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -40,8 +40,8 @@ stages:
 
           - template: steps/build_webapp_experimental.yml
             parameters:
-              azureSubscription: ${{ variables['azureSubscription'] }}
-              resourceGroupName: ${{ variables['resourceGroupName'] }}
-              projectRoot: ${{ variables['Build.SourcesDirectory'] }}
-              pythonVersion: ${{ variables['pythonVersion'] }}
+              azureSubscription: ${{ variables.azureSubscription }}
+              resourceGroupName: ${{ variables.resourceGroupName }}
+              projectRoot: ${{ variables.projectRoot }}
+              pythonVersion: ${{ variables.pythonVersion }}
               debug: true
