- use macro syntax vor variables - added startUpCommand to deploy_webapp

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -40,8 +40,8 @@ stages:
 
           - template: steps/build_webapp_experimental.yml
             parameters:
-              azureSubscription: ${{ variables.azureSubscription }}
-              resourceGroupName: ${{ variables.resourceGroupName }}
-              projectRoot: ${{ variables.projectRoot }}
-              pythonVersion: ${{ variables.pythonVersion }}
+              azureSubscription: $(azureSubscription)
+              resourceGroupName: $(resourceGroupName)
+              projectRoot: $(projectRoot)
+              pythonVersion: $(pythonVersion)
               debug: true
