--- a/azure-pipelines/steps/deploy_webapp.yml
+++ b/azure-pipelines/steps/deploy_webapp.yml
@@ -23,3 +23,4 @@ steps:
       appName: '$(webAppName)'
       package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
       runtimeStack: 'PYTHON|3.9'
+      startUpCommand: python3.9 manage.py migrate
