trying with ' around the macro-variables

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -40,8 +40,8 @@ stages:
 
           - template: steps/build_webapp_experimental.yml
             parameters:
-              azureSubscription: $(azureSubscription)
-              resourceGroupName: $(resourceGroupName)
-              projectRoot: $(projectRoot)
-              pythonVersion: $(pythonVersion)
+              azureSubscription: '$(django_gh)'
+              resourceGroupName: '$(resourceGroupName)'
+              projectRoot: '$(projectRoot)'
+              pythonVersion: '$(pythonVersion)'
               debug: true
