--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -40,8 +40,8 @@ stages:
 
           - template: steps/build_webapp_experimental.yml
             parameters:
-              azureSubscription: '$(django_gh)'
-              resourceGroupName: '$(resourceGroupName)'
-              projectRoot: '$(projectRoot)'
-              pythonVersion: '$(pythonVersion)'
+              azureSubscription: 'django_gh'
+              resourceGroupName: 'django_gh'
+              projectRoot: '$(System.DefaultWorkingDirectory)/django_webapp'
+              pythonVersion: '3.9'
               debug: true
