bald bei Jugend forscht

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -42,6 +42,6 @@ stages:
             parameters:
               azureSubscription: 'django_gh'
               resourceGroupName: 'django_gh'
-              projectRoot: $(System.DefaultWorkingDirectory)/django_webapp
+              projectRoot: '$(System.DefaultWorkingDirectory)/django_webapp'
               pythonVersion: '3.9'
               debug: true
